--- a/src/main/resources/templates/fragments/common/common_footer.html
+++ b/src/main/resources/templates/fragments/common/common_footer.html
@@ -1,8 +1,12 @@
 <footer class="container py-5">
     <div class="row">
         <div class="col-12 col-md">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mb-2"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
-            <small class="d-block mb-3 text-muted">&copy; 2018 Copyright StickerShop. All rights reserved.</small>
+            <a href="//github.com/SehwaKim/stickershop" target="_blank">
+                <svg id="i-github" viewBox="0 0 64 64" width="80" height="80">
+                    <path stroke-width="0" fill="currentColor" d="M32 0 C14 0 0 14 0 32 0 53 19 62 22 62 24 62 24 61 24 60 L24 55 C17 57 14 53 13 50 13 50 13 49 11 47 10 46 6 44 10 44 13 44 15 48 15 48 18 52 22 51 24 50 24 48 26 46 26 46 18 45 12 42 12 31 12 27 13 24 15 22 15 22 13 18 15 13 15 13 20 13 24 17 27 15 37 15 40 17 44 13 49 13 49 13 51 20 49 22 49 22 51 24 52 27 52 31 52 42 45 45 38 46 39 47 40 49 40 52 L40 60 C40 61 40 62 42 62 45 62 64 53 64 32 64 14 50 0 32 0 Z" />
+                </svg>
+            </a>
+            <small style="padding-top: 5px;" class="d-block mb-3 text-muted">&copy; 2018 Copyright StickerShop. All rights reserved.</small>
         </div>
         <div class="col-6 col-md">
             <div style="padding-bottom: 10px"><h5>About</h5></div>
