--- a/src/main/resources/templates/wishlist/listform.html
+++ b/src/main/resources/templates/wishlist/listform.html
@@ -17,7 +17,7 @@
                         success : function (data) {
                             document.getElementById(listid).remove();
                             if(data == 0){
-                                $("#listBody").append('<tr><td colspan="4" style="text-align: center;">위시리스트가 비어있습니다.</td></tr>');
+                                // $("#listBody").append('<tr><td colspan="4" style="text-align: center;">위시리스트가 비어있습니다.</td></tr>');
                             }
                         }
                     });
