update: 메인페이지 변경

--- a/src/main/resources/templates/fragments/common/common_header.html
+++ b/src/main/resources/templates/fragments/common/common_header.html
@@ -72,7 +72,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <!--<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     상품보기
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -83,7 +83,7 @@
                     <a class="dropdown-item" href="#">리눅스</a>
                     <a class="dropdown-item" href="#">TOOL</a>
                     <a class="dropdown-item" href="#">기타</a>
-                </div>
+                </div>-->
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" id="search" method="GET" th:action="@{/products}">
