--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -27,6 +27,14 @@
 
 <th:block layout:fragment="body_main">
     <br><br>
+    <div class="container-fluid" style="width: 60%; padding-bottom: 60px;">
+        <nav>
+            <ul class="pagination justify-content-center">
+                <a th:href="@{/products}"><img height="auto" th:src="@{/static/image/shop-now.png}"></a>
+            </ul>
+        </nav>
+    </div>
+    <div></div>
     <div style="text-align: center"><h2><strong>Best Sellers</strong></h2></div>
     <hr style="padding-bottom: 40px">
     <div class="container-fluid" style="width: 70%;">
