--- a/src/main/resources/templates/wishlist/listform.html
+++ b/src/main/resources/templates/wishlist/listform.html
@@ -79,7 +79,7 @@
                                         <small><strong>선택상품을</strong></small>
                                     </div>
                                     <div class="col">
-                                        <button type="submit" class="btn btn-dark btn-sm"><small>장바구니 담기</small></button>
+                                        <button type="button" class="btn btn-dark btn-sm"><small>장바구니 담기</small></button>
                                     </div>
                                     <div class="col">
                                         <button type="button" class="btn btn-dark btn-sm" id="deleteButton" name="deleteButton" ><small>삭제하기</small></button>
