--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -30,7 +30,7 @@
     <div class="container-fluid" style="width: 60%; padding-bottom: 60px;">
         <nav>
             <ul class="pagination justify-content-center">
-                <a th:href="@{/products}"><img height="auto" th:src="@{/static/image/shop-now.png}"></a>
+                <a th:href="@{/products}"><img height="auto" th:src="@{/images/shop-now.png}"></a>
             </ul>
         </nav>
     </div>
