--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>관리자 페이지</title>
+    <title>상품 관리</title>
     <!-- Custom styles for this template -->
     <link th:href="@{css/dashboard.css}" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.1.0/css/bootstrap.min.css}"/>
@@ -113,25 +113,31 @@
 
                 <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
 
-                <h2>Section title</h2>
+                <h2>상품 목록</h2>
                 <div class="table-responsive">
                     <table class="table table-striped table-sm">
                         <thead>
                         <tr>
-                            <th>#</th>
-                            <th>Header</th>
-                            <th>Header</th>
-                            <th>Header</th>
-                            <th>Header</th>
+                            <th>ID</th>
+                            <th colspan="2">제품명</th>
+                            <th>가격</th>
+                            <th>크기</th>
+                            <th>판매량</th>
+                            <th>수정날짜</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <td>1,001</td>
-                            <td>Lorem</td>
-                            <td>ipsum</td>
-                            <td>dolor</td>
-                            <td>sit</td>
+                        <tr th:if="${#lists.isEmpty(list)}">
+                            <td colspan="7">상품이 없습니다.</td>
+                        </tr>
+                        <tr th:if="${not #lists.isEmpty(list)}" th:each="product : ${list}">
+                            <td th:text="${product.id}"></td>
+                            <td><img class="img-thumbnail" width="50" height="50" th:src="@{${product.imagePath}}"></td>
+                            <td th:text="${product.name}"></td>
+                            <td th:text="${product.price}"></td>
+                            <td th:text="${product.size}"></td>
+                            <td th:text="${product.sales}"></td>
+                            <td th:text="${product.edittime}"></td>
                         </tr>
                         </tbody>
                     </table>
