gradle -> maven으로 변경, oath2 인증 삭제, user - role 관계를 n * n 으로 변경

--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -26,7 +26,7 @@
 </th:block>
 
 <th:block layout:fragment="body_main">
-    <br><br>
+    <br><a href="/admin">admin</a><br>
     <div class="container-fluid" style="width: 60%; padding-bottom: 60px;">
         <nav>
             <ul class="pagination justify-content-center">
